# inn

./: .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  .now_do  .perlcriticrc  .perltidyrc  BOOTSTRAP  BUILD  BUILD.in  CHANGES  CONTRIBUTORS  COPYRIGHT  ChangeLog  HACKING  INSTALL  Install.ms.1  Install.ms.2  LICENSE  MANIFEST  MakeInews  MakeLib  MakeRnews  Makefile  Makefile.global.in  Makefile.in  NEWS  PGPKEYS  README  README.md  README.perl_hook  README.pgp  README.python_auth_hook  README.python_hook  README.track  TODO  aclocal.m4  autoconf-inn.readme.htm  autogen  autoinsert.pl  (+17 more)
FAQ/: INN-faq_part1  INN-faq_part2  INN-faq_part3  INN-faq_part4  INN-faq_part5  INN-faq_part6  INN-faq_part7  INN-faq_part8  INN-faq_part9
authprogs/: .cvsignore  Makefile  README.auth_pass  README.readers.conf  auth_krb5.c  auth_pass.c  auth_smb.c  ckpasswd.c  domain.c  ident.c  libauth.c  libauth.h  libinnauth.c  libinnauth.h  pam.conf.example  pwcheck.c  radius.c
backends/: .cvsignore  Makefile  Makefile.in  actmerge.in  actmerge.sh  actmerge.sh.in  actsync.c  actsyncd.in  actsyncd.sh  actsyncd.sh.in  archive.c  batcher.c  buffchan.c  controlbatch.in  controlchan.in  crosspost.c  cvtbatch.c  delayer.in  filechan.c  gpgverify.in  innbind.c  inndf.c  innxbatch.c  innxmit.c  map.c  map.h  mod-active.in  news2mail.in  ninpaths.c  nntpget.c  nntpsend.in  overchan.c  pgpverify.in  rcompress.c  send-ihave.in  send-nntp.in  send-uucp.in  sendbatch.in  sendinpaths.in  sendxbatches.in  (+4 more)
ci/: README.md  apt-packages  install  test
config/: Makefile  Makefile.in  checkconf.sh  config.data.in  config.dist  config.dist.subst  config.scoreboard  config.scoreboard.orig  files.list  fixinterps.pl  subst.c  whsubst.sh
contrib/: .cvsignore  Makefile  README  README.contrib  README.newsresp_c  analyze-traffic.in  analyze-traffic.pl  archivegz.in  auth_pass.README  auth_pass.c  authmysql  authmysql.config  authmysql.in  backlogstat.in  backupfeed  backupfeed.in  batchpurge.pl  cleannewsgroups.in  cleannewsgroups.pl  cleanoi  cnfsstat.pl  count_overview.in  count_overview.pl  delayer.in  expirectl  expirectl.c  findmissing.pl  findreadgroups.in  findreadgroups.pl  fixhist  fixhist.in  format_overview.pl  inn_article_001.txt  innconfcheck  innconfcheck.in  innreport  innreport-filter.xslt  listoi.c  makeexpctl.in  makeexpctl.pl  (+22 more)
control/: .cvsignore  Makefile  controlbatch.in  controlchan.in  docheckgroups.in  gencancel.c  gpgverify.in  perl-nocem.in  pgpverify.in  signcontrol.in
doc/: FAQ  GPL  IPv6-info  Makefile  active.5  actsync.8  buffchan.8  checklist  clientlib.3  cnfsstat.8  compliance-nntp  config-design  config-semantics  config-syntax  control-messages  control.ctl.5  controlchan.8  crosspost.8  ctlinnd.8  cvtbatch.8  cycbuff.conf.5  dbz.3  distrib.pats.5  expire.ctl.5  expireindex.8  expirerm.8  external-auth  fastrm.8  filechan.8  getlist.1  grephistory.1  history  history-innfeed  hook-perl  hook-python  hook-tcl  hosts.nntp.5  incoming.conf.5  inn.conf.5  inncheck.8  (+44 more)
expire/: .cvsignore  Makefile  Makefile.in  convdate.c  expire.c  expire.pch  expireindex.c  expireover.c  expirerm.in  fastrm.c  grephistory.c  makeactive.c  makedbz.c  makehistory.c  newsrequeue.c  prunehistory.c  reap.pch
frontends/: .cvsignore  Makefile  Makefile.in  c7unbatch.sh.in  cnfsheadconf.in  cnfsstat.in  ctlinnd.c  decode.c  encode.c  feedone.c  getlist.c  gunbatch.sh.in  inews.c  innconfval.c  mailpost.in  ovdb_init.c  ovdb_monitor.c  ovdb_recover.c  ovdb_server.c  ovdb_stat.c  pullnews.in  rn.pch  rnews.c  scanspool.in  signcontrol.in  sm.c  sys2nf.c
history/: .cvsignore  Make.hismethods  Make.methods  Makefile  buildconfig.in  his.c  hisbuildconfig.in  hisinterface.h
include/: .cvsignore  Makefile  acconfig.h  clibrary.h  clibrary.h.in  conffile.h  config.h.in  configdata.h  dbz.h  innconf.h  inndcomm.h  innperl.h  innversion.h  libinn.h  logging.h  macros.h  md5.h  mydir.h  mymemory.h  myserver.h  mystring.h  nntp.h  ov.h  ov3.h  patchlevel.h  paths.h  paths.h.in  ppport.h  qio.h  rwlock.h  storage.h  threads.h  tst.h  uio.h
innd/: .cvsignore  Makefile  Makefile.in  README  art.c  art.h  cc.c  chan.c  his.c  icd.c  innd.c  innd.h  inndstart.c  keywords.c  lc.c  nc.c  newsfeeds.c  ng.c  perl.c  proc.c  python.c  rc.c  site.c  status.c  tcl.c  timer.c  tinyleaf.c  util.c  wip.c
innfeed/: .cvsignore  ChangeLog  INSTALL  Makefile  Makefile.in  README  article.c  article.h  buffer.c  buffer.h  config.h  config_l.c  config_y.c  config_y.h  configfile.h  configfile.l  configfile.y  connection.c  connection.h  convertconfig.pl  endpoint.c  endpoint.h  host.c  host.h  imap_connection.c  innfeed-convcfg.in  innfeed.1  innfeed.conf  innfeed.conf.5  innfeed.h  innlistener.c  innlistener.h  main.c  makedepend.sh  malloc.c  misc.c  misc.h  msgs.h  procbatch.in  procbatch.pl  (+8 more)
lib/: .cvsignore  Makefile  Makefile.in  alloca.c  argparse.c  artnumber.c  asprintf.c  bloom.c  buffer.c  canlock.c  checkart.c  cleanfrom.c  clientactive.c  clientlib.c  closeonexec.c  commands.c  concat.c  conffile.c  confparse.c  daemon.c  daemonize.c  date.c  dbz.c  dbz.pch  dbzalt.c  defdist.c  dispatch.c  endian.c  error.c  fdflag.c  fdflags.c  fdlimit.c  findheader.c  fseeko.c  ftello.c  genid.c  getaddrinfo.c  getconfig.c  getdtab.c  getfqdn.c  (+101 more)
m4/: aux-libs.m4  bdb.m4  berkeleydb.m4  blacklist.m4  blocklist.m4  canlock.m4  cc-c-o.m4  cc-flags.m4  clang.m4  compress.m4  getaddrinfo.m4  inet-ntoa.m4  int32.m4  iov-max.m4  krb5-config.m4  krb5.m4  large-fpos.m4  lib-depends.m4  lib-helper.m4  lib-pathname.m4  libtool.m4  ltversion.m4  mmap.m4  modes.m4  openssl.m4  pam-const.m4  paths.m4  perl.m4  prog-ensure.m4  python.m4  sasl.m4  sendfd.m4  sendmail.m4  snprintf.m4  socket-unix.m4  socket.m4  sqlite3.m4  syslog.m4  systemd.m4  users.m4  (+2 more)
nnrpd/: .cvsignore  Makefile  Makefile.in  actived.c  activedstats.c  article.c  auth-ext.c  cache.c  cache.h  commands.c  group.c  line.c  list.c  loadave.c  misc.c  newnews.c  nnrpd.c  nnrpd.h  perl.c  perm.c  post.c  post.h  protocol.h  pwcheck.c  python.c  sasl.c  sasl_config.c  tls.c  (+5 more)
(+935 files in other folders)
